--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -72,6 +72,11 @@ jobs:
         run: |
           curl https://cli-assets.heroku.com/install.sh | sh
 
+      - name: Set Heroku stack to container
+        run: heroku stack:set container -a middleway-backend-copy
+        env:
+          HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+
       - name: Login to Heroku Container Registry
         run: echo ${{ secrets.HEROKU_API_KEY }} | docker login --username=_ --password-stdin registry.heroku.com
 
